--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,9 +1,16 @@
 body {
-    background-color: purple;
+    background-color: rgb(82, 0, 82);
+}
+
+footer{
+color: mediumturquoise;
+text-align: center;
+
 }
 
 h1{
     text-align: center;
+    color: mintcream;
 }
 
 
@@ -11,18 +18,25 @@ h1{
 
 /*Elements*/
 #timer{
-    text-align: end
+    text-align: end;
+    color:mintcream
 }
 
+#answers{
+    position:absolute;
+    top: 50%;
+    left: 44%;
 
-
+}
 
 /*Classes*/
 .button{
     height:50px;
     width:100px;
-    display: block;
+    display: flex;
     cursor: pointer;
-    border: solid maroon
+    border: solid maroon;
+    padding: 100px;
+    
     
 }
