--- a/Assets/style.css
+++ b/Assets/style.css
@@ -31,12 +31,12 @@ h1, p{
 
 /*Classes*/
 .button{
-    height:50px;
+    /* height:50px;
     width:100px;
     display: flex;
     cursor: pointer;
     border: solid maroon;
     padding: 100px;
     
-    
+     */
 }
