--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(82, 0, 82);
+    background-color: rgb(0, 0, 0);
 }
 
 footer{
@@ -8,7 +8,7 @@ text-align: center;
 
 }
 
-h1, p{
+h1, h2, p{
     text-align: center;
     color: mintcream;
 }
@@ -32,15 +32,17 @@ h1, p{
 
 
 /*Classes*/
-.button{
-    /* height:50px;
-    width:100px;
-    display: flex;
+button{
+    display: inline-block;
+    margin: 5px;
     cursor: pointer;
-    border: solid maroon;
-    padding: 100px;
-    
-     */
+    font-size: 100%;
+    /* background-color: #563d7c; */
+    border-radius: 5px;
+    padding: 2px 10px;
+    color: rgb(35, 8, 124);
+    border: 0;
+    transition: background-color 0.1s;
 }
 .hidden{
     display: none;
